Bug 1437446 : Make probe process choice more visible in about:telemetry r=chutten,flod
- Make process the second level menu of (Scalars, Keyed Scalars, Histograms, Keyed Histograms and Events)
  - Change the process dropdown to be a store dropdown
  - Main store is selected by default
  - Added a label before the store dropdown
  - Refactor a bit the code to avoid lot of duplications

Note: This revision should be way cleaner

Differential Revision: https://phabricator.services.mozilla.com/D29483

UltraBlame original commit: bc29b6ed69e821515c82490a5c2afb5019d8f115

--- a/toolkit/content/aboutTelemetry.css
+++ b/toolkit/content/aboutTelemetry.css
@@ -240,6 +240,42 @@ grow
 1
 ;
 }
+#
+sectionFilters
+{
+display
+:
+flex
+;
+align
+-
+items
+:
+center
+;
+}
+#
+stores
+{
+padding
+-
+top
+:
+5px
+;
+padding
+-
+left
+:
+5px
+;
+padding
+-
+bottom
+:
+5px
+;
+}
 .
 heading
 >
